--- a/src/main/resources/btm/entry.mustache
+++ b/src/main/resources/btm/entry.mustache
@@ -7,5 +7,7 @@ _args:Object[]=java.util.stream.Stream.of($*).skip(1).toArray()
 IF true
 DO   traceln("entry : {{className}}::{{methodSignure}}");
 invocation.setMethod("{{methodSimpleName}}");
+invocation.setThisRef($0);
+invocation.setClazz({{className}}.class);
 com.etz.replay.unit.context.InvocationContext.getCurrent().push(invocation,_args);
 ENDRULE
