--- a/src/main/resources/btm/entry.mustache
+++ b/src/main/resources/btm/entry.mustache
@@ -10,6 +10,6 @@ invocation.setMethod("{{methodSimpleName}}");
 invocation.setMethodSignure("{{methodSignure}}");
 invocation.setThisRef($0);
 invocation.setClazz({{className}}.class);
-com.etz.replay.unit.classmap.ClassManager.saveObjectsRef($0,"{{methodSignure}}",_args);
+com.etz.replay.unit.classmap.SubjectContext.saveObjectsRef($0,"{{methodSignure}}",_args);
 com.etz.replay.unit.context.InvocationContext.getCurrent().push(invocation,_args);
 ENDRULE
