--- a/src/main/resources/btm/exception.mustache
+++ b/src/main/resources/btm/exception.mustache
@@ -1,9 +1,9 @@
 RULE exception exit {{methodSignure}}
-CLASS ^{{className}}
+{{TYPE}} ^{{className}}
 METHOD {{method}}
 AT EXCEPTION EXIT
 BIND   _args:Object[]=java.util.stream.Stream.of($*).skip(1).toArray()
-IF true
+IF com.etz.replay.unit.context.InvocationContext.getCurrent().entryMinus()
 DO   traceln("exception exit : {{className}}::{{methodSignure}}");
 com.etz.replay.unit.context.InvocationContext.getCurrent().pop(_args,null,$^);
 com.etz.replay.unit.classmap.SubjectContext.cleanObjectsRef($0);
