--- a/src/main/resources/btm/entry.mustache
+++ b/src/main/resources/btm/entry.mustache
@@ -3,13 +3,14 @@ RULE entry {{methodSignure}}
 METHOD {{method}}
 AT ENTRY
 BIND invocation:com.etz.replay.unit.context.Invocation=new com.etz.replay.unit.context.Invocation();
-_args:Object[]=java.util.stream.Stream.of($*).skip(1).toArray()
-IF com.etz.replay.unit.context.InvocationContext.getCurrent().entryIncr()
+_args:Object[]=java.util.stream.Stream.of($*).skip(1).toArray();
+currentInvocationContext:com.etz.replay.unit.context.InvocationContext=com.etz.replay.unit.context.InvocationContext.getCurrent(true);
+IF currentInvocationContext.entryIncr("{{methodSignure}}")
 DO   traceln("entry : {{className}}::{{methodSignure}}");
 invocation.setMethod("{{methodSimpleName}}");
 invocation.setMethodSignure("{{methodSignure}}");
 invocation.setThisRef($0);
 invocation.setClazz({{className}}.class);
 com.etz.replay.unit.classmap.SubjectContext.saveObjectsRef($0,"{{methodSignure}}",_args);
-com.etz.replay.unit.context.InvocationContext.getCurrent().push(invocation,_args);
+currentInvocationContext.push(invocation,_args);
 ENDRULE
