--- a/src/main/resources/btm/exception.mustache
+++ b/src/main/resources/btm/exception.mustache
@@ -2,9 +2,10 @@ RULE exception exit {{methodSignure}}
 {{TYPE}} ^{{className}}
 METHOD {{method}}
 AT EXCEPTION EXIT
-BIND   _args:Object[]=java.util.stream.Stream.of($*).skip(1).toArray()
-IF com.etz.replay.unit.context.InvocationContext.getCurrent().entryMinus()
+BIND   _args:Object[]=java.util.stream.Stream.of($*).skip(1).toArray();
+currentInvocationContext:com.etz.replay.unit.context.InvocationContext=com.etz.replay.unit.context.InvocationContext.getCurrent(false);
+IF currentInvocationContext!=null&&currentInvocationContext.entryMinus("{{methodSignure}}")
 DO   traceln("exception exit : {{className}}::{{methodSignure}}");
-com.etz.replay.unit.context.InvocationContext.getCurrent().pop(_args,null,$^);
+currentInvocationContext.pop("{{methodSignure}}",_args,null,$^);
 com.etz.replay.unit.classmap.SubjectContext.cleanObjectsRef($0);
 ENDRULE
