--- a/src/main/resources/btm/fdef.mustache
+++ b/src/main/resources/btm/fdef.mustache
@@ -1,3 +1,3 @@
 {{#lines}}
-    {{name}} {{#name}} : {{/name}} {{text}} {{sp}}
+    {{ident}}{{name}} {{#name}} : {{/name}} {{text}} {{sp}}
 {{/lines}}
