--- a/src/main/resources/btm/spec.mustache
+++ b/src/main/resources/btm/spec.mustache
@@ -3,7 +3,7 @@ package com.etz
 import spock.lang.Specification;
 import com.etz.replay.unit.context.JsonUtil;
 
-class {{name}}Spec extends Specification {
+class {{name}}{{method}}{{id}}Spec extends Specification {
 void verify{{method}}() {
 given:
 {{subjectDecl}}
