--- a/src/main/resources/btm/entry.mustache
+++ b/src/main/resources/btm/entry.mustache
@@ -9,8 +9,8 @@ IF currentInvocationContext.entryIncr("{{methodSignure}}")
 DO   traceln("entry : {{className}}::{{methodSignure}}");
 invocation.setMethod("{{methodSimpleName}}");
 invocation.setMethodSignure("{{methodSignure}}");
-invocation.setThisRef($0);
+invocation.setThisObject($0);
 invocation.setClazz($0==null?{{className}}.class:$0.getClass());
-com.etz.replay.unit.classmap.SubjectContext.saveObjectsRef($0,"{{methodSignure}}",_args);
+invocation.saveObjectsRef("{{methodSignure}}",_args);
 currentInvocationContext.push("{{methodSignure}}",invocation,{{argsType}},_args);
 ENDRULE
